--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <script src="file:///home/supertestnet/libbitvm/tapscript.js"></script>
-        <script src="file:///home/supertestnet/libbitvm/noble-secp256k1.js"></script>
-        <script src="file:///home/supertestnet/libbitvm/sha256.js"></script>
-        <script src="file:///home/supertestnet/libbitvm/libbitvm.js"></script>
+        <script src="https://supertestnet.github.io/libbitvm/tapscript.js"></script>
+        <script src="https://supertestnet.github.io/libbitvm/noble-secp256k1.js"></script>
+        <script src="https://supertestnet.github.io/libbitvm/sha256.js"></script>
+        <script src="https://supertestnet.github.io/libbitvm/libbitvm.js"></script>
     </head>
     <body>
         <script>
